[package]
name = "triton-cli"

version = "0.1.0"
description = "Command Line Interface to run, prove, and verify programs written for Triton VM."
readme = "README.md"

edition = "2024"
authors = ["Triton Software AG"]
license = "Apache-2.0"
homepage = "https://triton-vm.org/"
repository = "https://github.com/TritonVM/triton-cli"
documentation = "https://docs.rs/triton-cli/"

[dependencies]
